---------------------------------------------------------------------------------------------------
Version: 18.0.2
Date: 2020-03-16
  Features:
    - Added player health bonus software.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.1
Date: 2020-02-26
  Features:
    - Add a clickable HELP gui to the shop.
  Changes:
    - Add remote interface to get the payment chest for other mods to put coins in to it.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.0
Date: 2020-02-19
  Features:
    - Initial Release
  Changes:
  Bugfixes:
  Info: