@@ -5,6 +5,7 @@ Date: 2020-03-16
     - Added player health bonus software.
   Changes:
   Bugfixes:
+    - Shop prices are rounded down so they match on internal cost and display. As the totoal coins taken was always rounded down.
   Info:
 ---------------------------------------------------------------------------------------------------
 Version: 18.0.1
